# open_kknaks

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: impl-L0.md  impl-L1.md  impl-L2.md  impl-L3.md  impl-L45.md  reviewer.md  verifier.md
.claude/rules/: architecture.md  python-conventions.md  testing.md
.claude/skills/: check.md  docs-sync.md  lint.md  sprint.md  test.md
.github/workflows/: release.yml
docs/: ARCHITECTURE_V2.md  CLAUDE_CODE_ANALYSIS.md  DRAMATIQ_ANALYSIS.md  INDEX.md  PLAN.md  PRD.md  TEST_APP.md
docs/sprint/: S1-L0.md  S1-L1.md  S1-L2.md  S1-review.md  S2-L3.md  S2-review.md  S3-L4.md  S3-L45.md  S3-L5.md  S3-review.md  S4-D1.md  S4-V1.md  S4-V2.md  S4-review.md
examples/: .env.example  .gitignore  Dockerfile.app  Dockerfile.worker  docker-compose.yml  requirements.txt  setup.sh
examples/app/: main.py
examples/scenarios/: 01_basic.py  02_streaming.py  03_batch.py  04_priority.py  05_session.py  06_multi_queue.py  07_code_review.py
examples/worker/: run.py
open_kknaks/: __init__.py  _version.py  batch.py  client.py  config.py  exceptions.py  task.py
open_kknaks/broker/: base.py  redis.py
open_kknaks/cli/: dlq_cmd.py  main.py  queue_cmd.py  task_cmd.py  worker_cmd.py
open_kknaks/mcp/: __init__.py  __main__.py  server.py
open_kknaks/middleware/: base.py  callback.py  cost.py  logging.py  rate_limit.py  retries.py  timeout.py
open_kknaks/worker/: executor.py  line_buffer.py  pty_process.py  stream_parser.py  worker.py
scripts/: smoke_v2.py
tests/: conftest.py
(+25 files in other folders)
